fixed z-index in icons over the image

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ body {
   position: absolute;
   top: -11%;
   left: 28%;
+  z-index: 100000;
 }
 
 .lock {
